--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://alenzguric.github.io/chat-app/",
+  "homepage": "http://alenzguric.github.io/chat-app",
   "name": "chat-app",
   "version": "0.1.0",
   "private": true,
